tests/invalid/subsystem_ref_ambiguous.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "SubsystemRefAmbiguous",
    "description": "Invalid: referenced file contains multiple top-level systems. The ref mechanism requires exactly one. Expected error: ambiguous_subsystem_ref (canonical spelling; RETIRES the older `ref_ambiguous_system` — CONFORMANCE_SPEC §7.1.3f).",
    "authors": ["Test Suite"],
    "created": "2026-04-10T00:00:00Z"
  },
  "models": {
    "ClimateModel": {
      "variables": {
        "temp": {
          "type": "parameter",
          "units": "K",
          "default": 300
        }
      },
      "equations": [],
      "subsystems": {
        "Atm": { "ref": "../scoping/nested_subsystems.esm" }
      }
    }
  }
}
